什么是需要回收的垃圾（gc root定义）